<resources>
    <string name="app_name">VroomVroom Rider</string>
    <string name="home">Home</string>
    <string name="navigation">Navigation</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="order_details">Order Details</string>
    <string name="all_orders">All Orders</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="ok">OK</string>
    <string name="refresh">Refresh</string>
    <string name="network_error">Network Error</string>
    <string name="network_error_message">Please check your internet connection and try again.</string>
    <string name="general_error_message">Something went wrong</string>
    <string name="empty_order">No orders yet</string>
    <string name="empty_order_message">Once you place your orders, it will appear here.</string>
    <string name="comment">Comment</string>
    <string name="pick_order">Pick Order</string>
    <string name="collected">Order Collected</string>
    <string name="arrived">Arrived at Destination</string>
    <string name="delivered">Order Delivered</string>
    <string name="delivered_toolbar_title">Delivered</string>
    <string name="delivery_completed">Delivery Completed!</string>
    <string name="delivery_completed_desc">You have successfully delivered the order.</string>
    <string name="back_to_home">Back to Home</string>
    <string name="total_price">Total Price: ₱%s</string>
    <string name="total_item">Total Item: %d</string>
    <string name="creating_order">Creating Order…</string>
    <string name="congratulations">Congratulations!</string>
    <string name="placed_order_message">You have successfully placed order!</string>
    <string name="view_order">View Order</string>
    <string name="subtotal">Subtotal</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="total">Total</string>
    <string name="invalid_email_address">Invalid Email Address</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="invalid_password">Passwords don\'t match</string>
    <string name="send_otp">Send OTP</string>
    <string name="name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="verify">Verify OTP</string>
    <string name="otp">OTP</string>
    <string name="or">or</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="loading">Loading…</string>
    <string name="sending">Sending…</string>
    <string name="delivery">Delivery</string>
    <string name="unsaved_error">Unable to save your information. Please try again</string>
    <string name="otp_invalid">Please input OTP</string>
    <string name="peso">₱ %s</string>
    <string name="search_location">Search location</string>
    <string name="register_question">Don\'t have an account? <font fgcolor="#A30000"><u>Register</u></font></string>
    <string name="resend_email">Didn\'t receive code? <font fgcolor="#A30000"><u>Resend</u></font></string>
    <string name="login_question">Already have an account? <font fgcolor="#A30000"><u>Log In</u></font></string>
    <string name="mapbox_access_token">sk.eyJ1Ijoid2g0dHNlcm5hbWUiLCJhIjoiY2w1MTYzcjZvMDJtaTNjbzc4NWtnZGE0eSJ9.mXxKZckpaA29yB7SvtGz4g</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>