<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="order"
            type="com.vroomvroomrider.android.data.model.order.Order" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".view.ui.home.CollectFragment">

        <include
            android:id="@+id/appBarLayout"
            layout="@layout/appbar_layout" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            app:layout_constraintBottom_toTopOf="@+id/sliderLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/orderDetailLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingBottom="@dimen/dp_24"
                android:visibility="gone"
                tools:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

                <TextView
                    android:id="@+id/titleTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_24"
                    android:layout_marginTop="@dimen/dp_8"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="16sp"
                    android:text="@string/order_details"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_24"
                    android:text="@{`Paid by ` + order.payment.method}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/titleTv"
                    tools:text="Paid by Cash On Delivery" />

                <TextView
                    android:id="@+id/placedDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_24"
                    android:text="@{`Placed on: ` + order.createdAt}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView23"
                    tools:text="Placed on: 12 Dec 2021 12:04:05" />

                <include
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_mid"
                    android:layout_marginTop="16dp"
                    android:id="@+id/customerInfoLayout"
                    layout="@layout/customer_info_layout"
                    app:layout_constraintTop_toBottomOf="@+id/placedDate"/>

                <TextView
                    android:id="@+id/merchantNameTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:drawablePadding="@dimen/dp_8"
                    android:text="@{order.merchant.name}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/ic_store"
                    tools:text="Mcdonald's Tabaco"
                    app:layout_constraintTop_toBottomOf="@+id/view3"
                    app:layout_constraintStart_toStartOf="@+id/customerInfoLayout" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/bg_gray_f2f_rounded_100dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/customerInfoLayout" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/orderProductRv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:layout_marginTop="@dimen/margin_big"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/merchantNameTv"
                    tools:listitem="@layout/item_order_product"
                    tools:itemCount="3" />

                <View
                    android:id="@+id/view4"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:layout_marginHorizontal="@dimen/margin_big"
                    android:layout_marginVertical="@dimen/margin_big"
                    android:background="@drawable/bg_gray_f2f_rounded_100dp"
                    app:layout_constraintTop_toBottomOf="@+id/orderProductRv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_24"
                    android:layout_marginTop="@dimen/dp_16"
                    android:text="@string/subtotal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view4" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_24"
                    android:layout_marginTop="@dimen/dp_8"
                    android:text="@string/delivery_fee"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_24"
                    android:layout_marginTop="@dimen/dp_8"
                    android:text="@string/total"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView13" />

                <TextView
                    android:id="@+id/subTotalTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_24"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:layout_constraintBottom_toBottomOf="@+id/textView11"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView11"
                    tools:text="₱344.00" />

                <TextView
                    android:id="@+id/delivery_fee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_24"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:layout_constraintBottom_toBottomOf="@+id/textView13"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView13"
                    tools:text="₱49.00" />

                <TextView
                    android:id="@+id/totalTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_24"
                    android:layout_marginBottom="@dimen/dp_32"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView26"
                    tools:text="₱493.00" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_mid"
            android:layout_marginBottom="@dimen/dp_24"
            android:id="@+id/sliderLayout"
            layout="@layout/slider_layout"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:layout_marginBottom="@dimen/dp_64"
            android:id="@+id/commonNoticeLayout"
            layout="@layout/common_notice_layout"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>